// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profile /> should not render a user when none present 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="profile-container"
/>,
      "className": "app-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "profile-container",
      },
      "ref": null,
      "rendered": null,
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="profile-container"
/>,
        "className": "app-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "profile-container",
        },
        "ref": null,
        "rendered": null,
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "disableLifecycleMethods": true,
    "hydrateIn": undefined,
  },
}
`;

exports[`<Profile /> should render without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile
    user={
        Object {
            "id": "3214adf",
            "image": "some-url-here",
            "name": "Joben",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="profile-container"
>
        <div
                className="profile-card"
                style={
                        Object {
                                "background": "no-repeat url(some-url-here) center center",
                                "height": "60vh",
                              }
                }
        >
                <div
                        className="profile-card__user"
                >
                        <h2>
                                Joben
                        </h2>
                        <a
                                className="github-link"
                                href={undefined}
                                rel="noopener noreferrer"
                                target="_blank"
                        >
                                GitHub
                        </a>
                </div>
                <div
                        className="ideas-container"
                >
                        <h2
                                className="profile--ideas-header"
                        >
                                : Ideas
                        </h2>
                        <Unknown
                                className="profile-ideas"
                                ideas={Array []}
                        />
                </div>
        </div>
</section>,
      "className": "app-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="profile-card"
          style={
                    Object {
                              "background": "no-repeat url(some-url-here) center center",
                              "height": "60vh",
                            }
          }
>
          <div
                    className="profile-card__user"
          >
                    <h2>
                              Joben
                    </h2>
                    <a
                              className="github-link"
                              href={undefined}
                              rel="noopener noreferrer"
                              target="_blank"
                    >
                              GitHub
                    </a>
          </div>
          <div
                    className="ideas-container"
          >
                    <h2
                              className="profile--ideas-header"
                    >
                              : Ideas
                    </h2>
                    <Unknown
                              className="profile-ideas"
                              ideas={Array []}
                    />
          </div>
</div>,
        "className": "profile-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="profile-card__user"
>
              <h2>
                            Joben
              </h2>
              <a
                            className="github-link"
                            href={undefined}
                            rel="noopener noreferrer"
                            target="_blank"
              >
                            GitHub
              </a>
</div>,
            <div
              className="ideas-container"
>
              <h2
                            className="profile--ideas-header"
              >
                            : Ideas
              </h2>
              <Unknown
                            className="profile-ideas"
                            ideas={Array []}
              />
</div>,
          ],
          "className": "profile-card",
          "style": Object {
            "background": "no-repeat url(some-url-here) center center",
            "height": "60vh",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Joben
</h2>,
                <a
                  className="github-link"
                  href={undefined}
                  rel="noopener noreferrer"
                  target="_blank"
>
                  GitHub
</a>,
              ],
              "className": "profile-card__user",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Joben",
                },
                "ref": null,
                "rendered": "Joben",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "GitHub",
                  "className": "github-link",
                  "href": undefined,
                  "rel": "noopener noreferrer",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "GitHub",
                "type": "a",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="profile--ideas-header"
>
                  : Ideas
</h2>,
                <Unknown
                  className="profile-ideas"
                  ideas={Array []}
/>,
              ],
              "className": "ideas-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    undefined,
                    ": Ideas",
                  ],
                  "className": "profile--ideas-header",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                  ": Ideas",
                ],
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "profile-ideas",
                  "ideas": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="profile-container"
>
          <div
                    className="profile-card"
                    style={
                              Object {
                                        "background": "no-repeat url(some-url-here) center center",
                                        "height": "60vh",
                                      }
                    }
          >
                    <div
                              className="profile-card__user"
                    >
                              <h2>
                                        Joben
                              </h2>
                              <a
                                        className="github-link"
                                        href={undefined}
                                        rel="noopener noreferrer"
                                        target="_blank"
                              >
                                        GitHub
                              </a>
                    </div>
                    <div
                              className="ideas-container"
                    >
                              <h2
                                        className="profile--ideas-header"
                              >
                                        : Ideas
                              </h2>
                              <Unknown
                                        className="profile-ideas"
                                        ideas={Array []}
                              />
                    </div>
          </div>
</section>,
        "className": "app-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="profile-card"
            style={
                        Object {
                                    "background": "no-repeat url(some-url-here) center center",
                                    "height": "60vh",
                                  }
            }
>
            <div
                        className="profile-card__user"
            >
                        <h2>
                                    Joben
                        </h2>
                        <a
                                    className="github-link"
                                    href={undefined}
                                    rel="noopener noreferrer"
                                    target="_blank"
                        >
                                    GitHub
                        </a>
            </div>
            <div
                        className="ideas-container"
            >
                        <h2
                                    className="profile--ideas-header"
                        >
                                    : Ideas
                        </h2>
                        <Unknown
                                    className="profile-ideas"
                                    ideas={Array []}
                        />
            </div>
</div>,
          "className": "profile-container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="profile-card__user"
>
                <h2>
                                Joben
                </h2>
                <a
                                className="github-link"
                                href={undefined}
                                rel="noopener noreferrer"
                                target="_blank"
                >
                                GitHub
                </a>
</div>,
              <div
                className="ideas-container"
>
                <h2
                                className="profile--ideas-header"
                >
                                : Ideas
                </h2>
                <Unknown
                                className="profile-ideas"
                                ideas={Array []}
                />
</div>,
            ],
            "className": "profile-card",
            "style": Object {
              "background": "no-repeat url(some-url-here) center center",
              "height": "60vh",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Joben
</h2>,
                  <a
                    className="github-link"
                    href={undefined}
                    rel="noopener noreferrer"
                    target="_blank"
>
                    GitHub
</a>,
                ],
                "className": "profile-card__user",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Joben",
                  },
                  "ref": null,
                  "rendered": "Joben",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "GitHub",
                    "className": "github-link",
                    "href": undefined,
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "GitHub",
                  "type": "a",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="profile--ideas-header"
>
                    : Ideas
</h2>,
                  <Unknown
                    className="profile-ideas"
                    ideas={Array []}
/>,
                ],
                "className": "ideas-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      ": Ideas",
                    ],
                    "className": "profile--ideas-header",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    ": Ideas",
                  ],
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "className": "profile-ideas",
                    "ideas": Array [],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "disableLifecycleMethods": true,
    "hydrateIn": undefined,
  },
}
`;
